# Quiz-Game

./: README.md  app.py  instrucoes.txt  pyproject.toml  ranking.json
templates/: final.html  game_over.html  index.html  question.html  ranking.html
